assets/css/style.css
* {
    box-sizing: border-box;
}

header {
    display: flex;
    background-color: rgb(65, 236, 170);
    width: 100%;
    height: 150px;
}


nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    width: 100%;
    background-color: rgb(65, 236, 170);
    align-items: end;
    height: 150px;
}

nav ul {
    width: 50%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

nav li a {
    font-size: 30px;
    color: black;
    text-decoration: none;
}

main {
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
}

.curve {
    height: 450px;
    left: -15px;
    position: absolute;
    top: -20px;
    width: 100%;

}

#car-dog {
    width: 100%;
    height: 400px;
}

.car-dog {
    position: relative;
    text-align: center;
    color: white;
}

h2 {
    text-align: center;
    font-size: 40px;
    padding: 30px;
}

.bring-to-you {
    position: absolute;
    left: 290px;
    bottom: 200px;
    color: white;
    font-weight: bold;
    font-size: 80px;
    width: 600px;
    height: 40px;
}

.steps {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    height: 200px;
    width: 100%;
    position: relative;
    left: 15px;
} 

.steps p {
    font-size: 25px;
    flex-basis: 20%;
}

#calendar-pic {
    height: 130px;
    width: 100px;
}

.dot-top {
    width: 120px;
    height:60px;
    z-index: -1;
    background: transparent;
    border: none;
    border-top: dotted 2px black;
    padding: 40px 40px;
    border-radius: 40%;
    margin: 20px -50px 0;
}

.dot-bottom {
    width: 120px;
    height:60px;
    z-index: -1;
    background: transparent;
    border: none;
    border-bottom: dotted 2px black;
    padding: 40px 40px;
    border-radius: 0 0 50% 50%;
    margin: 0 -65px;
}

#car-pic {
    height: 130px;
    width: 100px;
}

#sponge-pic {
    height: 130px;
    width: 100px;
}

#animated-dog-pic {
    height: 130px;
    width: 100px;
}

aside {
    background-color: white;
    width: 25%;
    height: 100%;
}

#green-box {
    font-size: 55px; 
    border: 3px;
    width: 100%;
    height: 200px;
    border-radius: 10px;
    padding: 5px;
    background-color: rgba(9, 164, 60, 0.713);
    color: white;
}

#green-box p {
    margin-top: 20px;
}

#cartoon-dog {
    height: 360px;
    width: 100%;
    margin-top: -100px;
    position: relative;
}

#spick-n-span-logo {
    height: 300px;
    width: 100%;
}

footer {
        display: flex;
        justify-content: flex-end;
        width: 75%;
        background-color: rgb(65, 236, 170) ;
        color: gray;
        font-size: 17px;
        padding: 10px;
        text-align: center;
    }

footer p {
    width: 100%;
    
}

.footer {
    display: flex;
    justify-content: flex-end;
} 

